# Bury-NPC

./: .gitignore  BuryTakeBodies.esp  CMakeLists.txt  CMakePresets.json  PressFCorpses.esp  README.md  vcpkg-configuration.json  vcpkg.json
include/: QuickLootAPI.h
include/SkyPrompt/: API.hpp
meshes/furniture/: BuryAnimMarker.nif
src/: MsvcShim.cpp  PickupManager.cpp  PickupManager.h  PromptManager.cpp  PromptManager.h  RespectManager.cpp  RespectManager.h  Settings.cpp  Settings.h  main.cpp  pch.h  plugin.h
